[package]
name = "ratcl"
version = "0.1.1"
edition = "2024"
description = "Create complex ratatui layouts with a simple API."
license = "Unlicense"
homepage = "https://github.com/Android789515/ratcl"
repository = "https://github.com/Android789515/ratcl"
documentation = "https://docs.rs/ratcl/latest/ratcl/"

[dependencies]
ratatui = "0.29.0"
